--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "expo": "~47.0.3",
     "expo-av": "^13.0.1",
+    "expo-file-system": "^15.1.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-elements": "^3.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
